resource-manifests/learn-ingress/ingress-customer1-coit-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coit-frontend
  namespace: customer1
  annotations:
    ingressClassName: nginx
spec:
  rules:
  - host: "customer1.basilportfolio.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: coit-frontend-lb
            port:
              number: 80
